--- a/cart.html
+++ b/cart.html
@@ -61,7 +61,7 @@
 				 <div class="row">
 					 <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
 						 <span class="nav-text">
-							 <i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
+							 <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}
 
 						 </div>
 
@@ -150,13 +150,13 @@
 
     <div class="infoWrap">
         <div class="cart-shoppingSection">
-        <img src="img/phone300x300.png" alt="" class="itemImg" />
+        <img src="{{ProductCardsItem.CATIMAGE}}" alt="" class="itemImg" />
           <p class="itemNumber">{{ProductCardsItem.NUM}}</p>
           <h3>{{ProductCardsItem.NUM}}</h3>
 
-           <p> <input ng-model="ProductCardsItem.QTY" type="text"  class="qty" placeholder="1"/></p>
+           <p> <input ng-change="CalcPrices()" ng-model="ProductCardsItem.QTY" type="text"  class="qty" placeholder="1"/></p>
 
-          <p class="stockStatus"> In Stock</p>
+          <p class="stockStatus"> </p>
         </div>
 
 
@@ -207,10 +207,10 @@
 
   <div class="subtotal heading-principal">
     <ul>
-      <li class="totalRow"><span class="label">Subtotal</span><span class="value">$2000.00</span></li>
+      <li class="totalRow"><span class="label">Subtotal</span><span class="value">{{AllPrice| currency}}</span></li>
 
-            <li class="totalRow"><span class="label">Tax</span><span class="value">$4.00</span></li>
-            <li class="totalRow final"><span class="label">Total</span><span class="value">$35000.00</span></li>
+            <li class="totalRow"><span class="label">Tax</span><span class="value">0</span></li>
+            <li class="totalRow final"><span class="label">Total</span><span class="value">{{AllPrice| currency}}</span></li>
       <li class="totalRow"><a href="payment-information.html" class="btn btn-secondary btn-green btn-block ">Checkout</a></li>
 
     </ul>
@@ -220,38 +220,36 @@
 </body>
 
 <footer class="text-light">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3 col-lg-4 col-xl-3">
-          <h5>About</h5>
-          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-          <p class="mb-0">
-            Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-          </p>
-        </div>
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
-          <h5>Informations</h5>
-          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-          <ul class="list-unstyled">
-            <li><a href="">Link 1</a></li>
-            <li><a href="">Link 2</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-          <h5>Others links</h5>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3 col-lg-4 col-xl-3">
+        <h5>About</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <p class="mb-0">
+          {{MasterInfo[0].AboutCube}}
+        </p>
+      </div>
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+        <h5>Informations</h5>
         <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
         <ul class="list-unstyled">
-          <li><a href="">Link 1</a></li>
-          <li><a href="">Link 2</a></li>
+          <li ng-repeat="mylink in Links1"><a href={{mylink.PageLinks}}>{{mylink.PageLinks}}</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
+        <h5>Others links</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li ng-repeat="mylink in Links2"><a href={{mylink.PageLinks}}>{{mylink.PageLinks}}</a></li>
         </ul>
       </div>
       <div class="col-md-4 col-lg-3 col-xl-3">
         <h5>Contact</h5>
         <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
         <ul class="list-unstyled">
-          <li><i class="fa fa-home mr-2"></i> Cube-US</li>
-          <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
-          <li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
+          <li><i class="fa fa-home mr-2"></i> {{MasterInfo[0].CubeLocation}}</li>
+          <li><i class="fa fa-envelope mr-2"></i> {{MasterInfo[0].CubeEmail}}</li>
+          <li><i class="fa fa-phone mr-2"></i> {{MasterInfo[0].CubeLocalPhone}}</li>
         </ul>
       </div>
       <div class="col-12 copyright mt-3  " >
@@ -261,7 +259,7 @@
       </div>
     </div>
   </div>
-  </footer>
+</footer>
 
 </div>
 
